# mender-artifact-rust

./: Cargo.toml  Readme.md
resources/tests/: mender-demo-artifact.mender
src/: lib.rs  main.rs
