[package]
name = "mender_artifact"
version = "0.1.1"
authors = ["Ole Petter <olepor@matnat.uio.no>"]
edition = "2018"

[lib]
path = "src/lib.rs"
# crate-type = ["dylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Derive Deserialization for the config struct
serde_json = "1" # serde_json
log = "0.4"
simple_logger = "1.3.0"
tar = "0.4"
flate2 = "1.0"